[package]
name = "redemptionV0"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "redemption"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
metaplex-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
arrayref = "0.3.6"
